--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "browser": "dist/jigsaw.umd.js",
   "dependencies": {},
   "devDependencies": {
-    "rollup": "^1.0.0"
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-jest": "^24.7.1",
+    "jest": "^24.7.1",
+    "rollup": "^1.0.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^4.1.0"
   },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "pretest": "npm run build",
-    "test": "node test/test.js"
+    "test": "jest"
   },
   "files": [
     "dist"
