add unit test for imgSelector

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "jigsaw",
   "version": "1.0.0",
   "browser": "dist/jigsaw.umd.js",
-  "dependencies": {},
+  "dependencies": {
+    "@babel/runtime": "^7.4.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "babel-jest": "^24.7.1",
     "jest": "^24.7.1",
+    "prettier": "1.16.4",
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-node-resolve": "^4.1.0"
@@ -15,7 +19,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "jest"
+    "test": "jest",
+    "jus": "jest --updateSnapshot"
   },
   "files": [
     "dist"
